{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 113,
  "lineage": "60d96c5b-ba30-eeba-a0f9-81bc959df329",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-health-check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-10T02:39:07.592-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gkelearnings-453911/global/firewalls/allow-health-check",
            "log_config": [],
            "name": "allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
            "priority": 1000,
            "project": "gkelearnings-453911",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/firewalls/allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-15T00:41:48.849-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gkelearnings-453911/global/firewalls/allow-iap-ssh",
            "log_config": [],
            "name": "allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
            "priority": 1000,
            "project": "gkelearnings-453911",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/firewalls/allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-iap"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-04-15T00:31:19.640-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gkelearnings-453911/global/firewalls/allow-internal-lb",
            "log_config": [],
            "name": "allow-internal-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
            "priority": 1000,
            "project": "gkelearnings-453911",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/firewalls/allow-internal-lb",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "allow_psc_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/backendServices/internal-lb-backend",
            "creation_timestamp": "2025-04-10T02:25:45.622-07:00",
            "forwarding_rule_id": 6688017381590708342,
            "id": "projects/gkelearnings-453911/regions/us-east1/forwardingRules/internal-lb-rule",
            "ip_address": "10.0.0.10",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "internal-lb-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
            "network_tier": "PREMIUM",
            "ports": [
              "80"
            ],
            "project": "gkelearnings-453911",
            "recreate_closed_psc": false,
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/forwardingRules/internal-lb-rule",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/subnetworks/test-subnet"
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance.umig1_internal",
            "google_compute_instance.umig2_internal",
            "google_compute_instance_group.umig1_internal",
            "google_compute_instance_group.umig2_internal",
            "google_compute_instance_template.nginx_internal",
            "google_compute_network.test-vpc",
            "google_compute_region_backend_service.internal_lb_backend",
            "google_compute_region_instance_group_manager.mig_internal1",
            "google_compute_subnetwork.test-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "umig1_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/zones/us-east1-b/disks/umig1-internal"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-15T00:17:21.433-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gkelearnings-453911/zones/us-east1-b/instances/umig1-internal",
            "instance_id": "1296483611378431726",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "xoOywYIEuXw=",
            "name": "umig1-internal",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
                "network_ip": "10.0.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/subnetworks/test-subnet",
                "subnetwork_project": "gkelearnings-453911"
              }
            ],
            "project": "gkelearnings-453911",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/zones/us-east1-b/instances/umig1-internal",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-health-check",
              "allow-iap"
            ],
            "tags_fingerprint": "hFfDg2-oWh8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.test-vpc",
            "google_compute_subnetwork.test-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "umig2_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250311",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/zones/us-east1-b/disks/umig2-internal"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-04-15T00:17:34.675-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/gkelearnings-453911/zones/us-east1-b/instances/umig2-internal",
            "instance_id": "3209273762240509665",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "xoOywYIEuXw=",
            "name": "umig2-internal",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
                "network_ip": "10.0.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/subnetworks/test-subnet",
                "subnetwork_project": "gkelearnings-453911"
              }
            ],
            "project": "gkelearnings-453911",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/zones/us-east1-b/instances/umig2-internal",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-health-check",
              "allow-iap"
            ],
            "tags_fingerprint": "hFfDg2-oWh8=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.test-vpc",
            "google_compute_subnetwork.test-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gkelearnings-453911/global/networks/custom-network",
            "mtu": 0,
            "name": "custom-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8115805420068192516",
            "numeric_id": "8115805420068192516",
            "project": "gkelearnings-453911",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "internal_lb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/instanceGroups/mig-east1-int1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/zones/us-east1-b/instanceGroups/umig1-internal",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/zones/us-east1-b/instanceGroups/umig2-internal",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-04-10T02:25:30.050-07:00",
            "enable_cdn": false,
            "fingerprint": "ZtvsXyGAtd8=",
            "generated_id": 197487826354974822,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/healthChecks/tcp-health-check"
            ],
            "id": "projects/gkelearnings-453911/regions/us-east1/backendServices/internal-lb-backend",
            "load_balancing_scheme": "INTERNAL",
            "log_config": [
              {
                "enable": false,
                "sample_rate": 0
              }
            ],
            "name": "internal-lb-backend",
            "project": "gkelearnings-453911",
            "protocol": "TCP",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/backendServices/internal-lb-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance.umig1_internal",
            "google_compute_instance.umig2_internal",
            "google_compute_instance_group.umig1_internal",
            "google_compute_instance_group.umig2_internal",
            "google_compute_instance_template.nginx_internal",
            "google_compute_network.test-vpc",
            "google_compute_region_instance_group_manager.mig_internal1",
            "google_compute_subnetwork.test-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-15T05:41:23.876-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gkelearnings-453911/regions/us-east1/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
            "project": "gkelearnings-453911",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/routers/nat-router"
          },
          "dependencies": [
            "google_compute_network.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "gkelearnings-453911/us-east1/nat-router/cloud-nat-config",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "cloud-nat-config",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gkelearnings-453911",
            "region": "us-east1",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.test-vpc",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "test-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-10T01:23:20.784-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/gkelearnings-453911/regions/us-east1/subnetworks/test-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "test-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gkelearnings-453911",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/subnetworks/test-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8681932030085873943
          },
          "dependencies": [
            "google_compute_network.test-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "test-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-04-10T01:42:43.154-07:00",
            "enable_flow_logs": false,
            "gateway_address": "192.168.0.1",
            "id": "projects/gkelearnings-453911/regions/us-east1/subnetworks/test-subnet1",
            "ip_cidr_range": "192.168.0.0/16",
            "name": "test-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/global/networks/custom-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gkelearnings-453911",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gkelearnings-453911/regions/us-east1/subnetworks/test-subnet1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7856379104648116844
          },
          "dependencies": [
            "google_compute_network.test-vpc"
          ]
        }
      ]
    }
  ]
}